# Rhea

./: CMakeLists.txt  LICENSE  README.md  bootstrap_level.json  instructions.txt
assets/actors/: cube.json  garland.json  lymphocyte.json  lymphocyte2.json  sponza_prop_test.json
assets/levels/: bootstrap_level.json
assets/nn/: pipeline.json  weights_index.json
assets/render/: main_render_graph.json  material_manager.json  renderer.json
assets/system/: engine.json
bats/: generate_sln.bat  vcpkg_install.bat
cmake/: dependencies.cmake
shaders/: clouds.frag  copy.frag  cube.frag  cube.vert  definitions.glsl  definitions.h  depth_prepass.frag  depth_prepass.vert  forward.frag  fullscreen.vert  geometry.frag  geometry.vert  ibl_brdf_lut.frag  ibl_irradiance.frag  ibl_prefilter.frag  layout.glsl  lighting.frag  math.glsl  pbr_helpers.glsl  rtxgi.rgen  rtxgi_hit.rchit  rtxgi_hit_secondary.rchit  rtxgi_miss.rmiss  rtxgi_miss_secondary.rmiss  rtxgi_moments.comp  rtxgi_reproj_validate.comp  rtxgi_reprojection.comp  rtxgi_spatial_filter.comp  rtxgi_temporal_accum.comp  rtxgi_variance_guided_spatial_filter.comp  shadow.vert  shadow_debug.frag  skybox.vert  ssr.frag  ssr_composite.frag  tonemap.frag  tonemap.slang  triangle.frag  triangle.vert  wireframe.frag  (+1 more)
shaders/nn_denoiser/: _choose_activation_fn.slang  _separable_conv_body.slang  _validate_channels.slang  bottleneck.slang  cat.slang  channel_writer.slang  dec.slang  down.slang  enc.slang  head.slang  input.slang  nn_denoiser.slang  nn_denoiser_api.slang  nn_denoiser_resource.slang  nn_lib.slang  separable_conv.slang  up.slang
shaders/push_constants/: model_push_constants.glsl  rtxgi_push_constants.glsl
shaders/resources/: camera.glsl  dbuffer.glsl  gbuffer.glsl  gbuffer.slang  hdr_color.glsl  hdr_color_defines.glsl  hdr_color_defines.slang  hdr_color_output.glsl  hdr_color_output.slang  hdr_color_storage.glsl  hdr_color_storage.slang  light.glsl  mesh_table.glsl  pbr_material.glsl  pbr_material_ssbo.glsl  pbr_material_table.glsl  primitive_table.glsl  reflection.glsl  shadow.glsl  ssr.glsl  tlas.glsl  transform_table.glsl
shaders/rtx/: ray_payload.glsl  rng.glsl  sampling.glsl  sbt.glsl  svgf_bilateral.glsl  svgf_clamp.glsl  svgf_common.glsl  svgf_fetch.glsl  svgf_validation.glsl
shaders/utils/: draw_number.slang  hsv.glsl  math.glsl  tonemapping.glsl  tonemapping.slang
src/: engine.cpp  engine.h  globals.cpp  globals.h  main.cpp
src/assets/: StaticMesh.cpp  StaticMesh.ixx  asset.ixx  asset_manager.cpp  asset_manager.ixx  asset_scene.cpp  asset_scene.ixx  assets_module.ixx  cubemap.cpp  cubemap.ixx  exr.cpp  exr.ixx  helpers.ixx  material.cpp  material.ixx  material_parameter_type.ixx  mesh.cpp  mesh.ixx  static_mesh.cpp  static_mesh.ixx  texture.cpp  texture.ixx  types.ixx
src/common/: Generator.ixx  array_helpers.ixx  assertion_macros.h  assertions.ixx  container_traits.ixx  dependency_collector.ixx  dump_exr.ixx  enum_helpers.h  enum_helpers.ixx  file_helpers.ixx  fixed_string.h  fixed_string.ixx  fmt_helpers.h  foreach_macro.h  guard_value.ixx  hash_utils.ixx  json_utils.cpp  json_utils.h  json_utils.ixx  linear_color.ixx  name.cpp  name.ixx  name_helpers.h  offsetof.h  paths.cpp  paths.h  paths.ixx  projection.h  reflect.cpp  reflect.h  reflect.ixx  reflect_macros.h  static_name.ixx  string_helpers.ixx  string_utils.ixx  texture_format.ixx  type_id.ixx  type_macros.h  type_utils.h  type_utils.ixx
src/engine/: engine.cpp  engine.ixx  engine_module.ixx  globals.ixx  scene_extractor.cpp  scene_extractor.ixx  scene_view.cpp  scene_view.ixx  scene_view_processor.ixx  scene_view_proxy_mesh.cpp  scene_view_proxy_mesh.ixx
src/expr/: expr.ixx
src/fastgltf_helper/: fastgltf.ixx
src/framework/: actor.cpp  actor.h  actor.ixx  actor_component.cpp  actor_component.h  actor_component.ixx  camera.cpp  camera.h  camera.ixx  engine_clock.h  engine_clock.ixx  framework_core.ixx  framework_module.ixx  level.cpp  level.h  material.h  object.h  object_reflection.cpp  object_reflection.h  render_id.ixx  rh_components.cpp  rh_components.ixx  rhcomp_light.cpp  rhcomp_light.ixx  rhcomp_mesh.cpp  rhcomp_mesh.ixx  rhcomp_renderable.cpp  rhcomp_renderable.ixx  rhcomp_transform.cpp  rhcomp_transform.ixx  world.cpp  world.h  world.ixx  world_script.cpp  world_script.h  world_script.ixx
src/game/: brdf_lut_capture_render_graph.cpp  brdf_lut_capture_render_graph.ixx  cubemap_capture_render_graph.cpp  cubemap_capture_render_graph.ixx  debug_line.ixx  game_engine.cpp  game_engine.h  game_engine.ixx  game_module.ixx  game_render_graph.cpp  game_render_graph.ixx  game_renderer.cpp  game_renderer.h  game_renderer.ixx  generic_render_graph.cpp  generic_render_graph.ixx  names.ixx  nn_pipeline.ixx  nn_rg_integration.cpp  nn_rg_integration.ixx  nn_ubo.ixx  nn_weights.ixx  render_constants.ixx  render_layout.h
src/glm_wrap/: glm.ixx
src/input/: input.ixx
src/logging/: log.h  log.ixx  log_macro.h
src/math/: aabb.h  aabb.ixx  dim2d.ixx  extent.ixx  frustum.cpp  frustum.ixx  math_module.ixx  math_utils.ixx  rhea_math.h  rhea_math.ixx  transform.cpp  transform.h  transform.ixx  vec.ixx  vertex.h  vertex.ixx
src/object/: json_object.cpp  json_object.ixx  object.ixx  object_module.ixx  object_reflected.ixx  object_reflection.cpp  object_reflection.ixx  object_reflection_macro.h
src/platform/: platform_module.ixx  window.cpp  window.h  window.ixx
src/profiling/: profile.h  profile.ixx
src/render/: camera.ixx  gpu_profile.ixx  gpu_profile_impl.cpp  gpu_types.ixx  graphics_pipeline.h  graphics_pipeline.ixx  graphics_pipeline_desc.ixx  handle_types.h  handle_types.ixx  material.cpp  material.ixx  material_instance.cpp  material_instance.ixx  material_interface.ixx  material_manager.cpp  material_manager.ixx  material_model.cpp  material_model.ixx  material_schema.cpp  material_schema.ixx  pipeline_desc.ixx  pipeline_family.cpp  pipeline_family.ixx  pipeline_object.cpp  pipeline_object.h  pipeline_object.ixx  render_backend.h  render_backend.ixx  render_common.ixx  render_graph.cpp  render_graph.h  render_graph.ixx  render_id.cpp  (+31 more)
(+173 files in other folders)
